feat: add role-based authorization with JWT